# Heart-Conduction

./: .gitignore  ADDITIONAL_RELATED_PAPERS.md  CARDIAC_BOUNDARY_CONDUCTION_BIBLIOGRAPHY.md  CLAUDE.md  ENVIRONMENT.md  LBM_Monodomain_D2Q9.pptx  QUICK_REFERENCE.txt  SEARCH_SUMMARY.md  requirements-lock.txt  requirements.txt
.claude/conversations/: 2026-03-05-114443-this-session-is-being-continued-from-a-previous-co.txt  2026-03-05-204319-this-session-is-being-continued-from-a-previous-co.txt
Bidomain/Engine_V1/: AUDIT.md  PROGRESS.md  (+8 more)
Builder/: BACKEND.md  Builder.spec  README.md  __init__.py  launcher.py  requirements.txt  setup.py
ClaudeConversations/: 2026-01-28-read-over-all-stuff-in-monodomain-v53.txt  2026-02-04-linear-solver-and-code-structure.txt  2026-02-05-v54-fdm-fvm-scaling-fix.txt  2026-03-08-192538-this-session-is-being-continued-from-a-previous-co.txt
MeshLibrary/: .$Circle_Infarct.png.bkp  Circle_Infarct.drawio
Research/code_examples/torchcor/: README.md  pyproject.toml  requirements.txt
Research/code_examples/torchcor/demo/: atrium.py  ventricle.py
Research/code_examples/torchcor/docker/: Dockerfile  README.md  main.py
Research/code_examples/torchcor/torchcor/core/: mesh.py  stimulation.py
Research/code_examples/torchcor/torchcor/ecg/: dirichlet.py  heart_ep.py  neumann.py  torso_heart.py
Research/code_examples/torchcor/torchcor/simulator/: monodomain.py
Research/code_examples/torchcor/verification/: benchmark.py  benchmark_quant.py  manufactured_2d.py  plot.py
Surrogate/: IMPLEMENTATION.md  PROGRESS.md  README.md  improvement.md
(+562 files in other folders)
