[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torchcor"
version = "0.3.2"
description = "High-Performance Large-Scale Cardic Electrophysiology Simulations on GPUs"
authors = [{ name = "Bei Zhou", email = "bei.zhou@imperial.ac.uk" }]
readme = "README.md" 
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pygmsh>=7.1",
    "nvidia-ml-py>=12",
    "pyvista>=0.45",
    "scipy>=1.13",

    # Critical: pandas 3.0 currently breaks wfdb import
    "pandas>=2.2.3,<3",

    # Keep wfdb but do not force newer incompatible pandas
    "wfdb>=4.3.0,<5",

    "seaborn>=0.13",
    "scikit-learn>=1.4",
]

[tool.setuptools]
packages = [
    "torchcor", 
    "torchcor.core", 
    "torchcor.ionic", 
    "torchcor.ionic.cellml",
    "torchcor.simulator",
    "torchcor.tools",
    "torchcor.electrodes",
    "torchcor.signalanalysis",
    "torchcor.signalanalysis.io",
    "torchcor.signalanalysis.signalanalysis",
    "torchcor.signalanalysis.signalplot",
    "torchcor.signalanalysis.tools"] 
